--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ enable_testing()
 set(GTEST_ROOT "${GTEST_LIBRARY_PATH}")
 find_package(GTest REQUIRED)
 
+set(CMAKE_BUILD_TYPE "RELEASE")
 set(CMAKE_FIND_LIBRARY_SUFFIXES "" ".a" ".lib")
 list(APPEND CMAKE_FRAMEWORK_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../libs/XPMP2/build/XPMP2.framework/Versions/1.0")
 list(APPEND CMAKE_FRAMEWORK_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../libs/XPMP2/build")
@@ -39,7 +40,7 @@ if(APPLE)
 	add_library(libspeech STATIC IMPORTED GLOBAL)
     set_property(TARGET libspeech PROPERTY IMPORTED_LOCATION "${SPEECH_LIBRARY}")
 elseif(WIN32)
-    set(SPEECH_LIBRARY_WIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../libs/libspeechwin/build/Debug")
+    set(SPEECH_LIBRARY_WIN_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../libs/libspeechwin/build/Release")
     find_library(SPEECH_LIBRARY libspeechwin "${SPEECH_LIBRARY_WIN_DIR}")
     add_library(libspeech SHARED IMPORTED GLOBAL)
     set_property(TARGET libspeech PROPERTY IMPORTED_IMPLIB "${SPEECH_LIBRARY}")
