--- a/libs/libspeechmac/CMakeLists.txt
+++ b/libs/libspeechmac/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.12.0)
 project(libspeechmac)
+set(CMAKE_BUILD_TYPE "RELEASE")
 
 add_library(libspeechmac STATIC
     libspeechmac.cpp
