--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_base: bleeding-edge
+          build_number: ${{ github.run_number }}
           release_notes: ${{ github.event.head_commit.message }}
           download_asset_name: ${{ steps.create_zip.outputs.zip_name }}
 
