--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,6 +186,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_base: bleeding-edge
+          build_number: ${{ github.run_number }}
           release_notes: ${{ github.event.head_commit.message }}
           download_asset_name: ${{ steps.create_zip.outputs.zip_name }}
 
@@ -194,7 +195,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.recycle_release.outputs.new_tag }}
-          name: ${{ github.event.head_commit.message }}
+          name: 'latest bleeding-edge build'
           allow_override: true
           commitish: master
           prerelease: true
