Load entire apt.dat + remove POC + fix bugs * Conversation loops when holding short * Diving under the ground when landing at above-MSL airports (example: KORD)

--- a/src/libdataxp_test/CMakeLists.txt
+++ b/src/libdataxp_test/CMakeLists.txt
@@ -8,6 +8,7 @@ enable_testing()
 add_executable(libdataxp_test 
     cppTest.cpp
     xpAirportReaderTest.cpp
+    hydrationTest.cpp
 )
 
 set_property(TARGET libdataxp_test PROPERTY CXX_STANDARD 14)
