Resolve issues towards Alpha 1
* Add flight plan import
* Rearrange menu items
* Add maneuver debug info to labels
* Add detection of aircraft within runway bounds
* Complete testing & fixing of runway separation by TWR controller
* Shorten unheard conversation times

--- a/src/libai/CMakeLists.txt
+++ b/src/libai/CMakeLists.txt
@@ -4,12 +4,15 @@ project(libai VERSION 0.1.0)
 add_library(libai STATIC 
     libai.hpp
     libai.cpp
-    aiController.hpp
+    resourceAllocator.hpp
+    aiControllerBase.hpp
+    localController.hpp
     aiPilot.hpp
     aiAircraft.hpp
     maneuverFactory.hpp
     maneuverFactory.cpp
     clearanceFactory.hpp
+    simpleRunwayMutex.hpp
 )
 
 set_property(TARGET libai PROPERTY CXX_STANDARD 14)
