--- a/src/libworld/CMakeLists.txt
+++ b/src/libworld/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(libworld VERSION 0.1.0)
 
-add_library(libworld STATIC 
+add_library(libworld STATIC
+    airlineReferenceTable.cpp
+    airlineReferenceTable.hpp
+    aircraftTypeReferenceTable.hpp
+    aircraftTypeReferenceTable.cpp
     actor.cpp
     aircraft.cpp
     airport.cpp
