Reading existing routes from OpenFlights data

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "libs/websocketpp"]
 	path = libs/websocketpp
 	url = https://github.com/zaphoyd/websocketpp.git
+[submodule "libs/openflights"]
+	path = libs/openflights
+	url = https://github.com/jpatokal/openflights.git
