--- a/src/libworld/CMakeLists.txt
+++ b/src/libworld/CMakeLists.txt
@@ -42,6 +42,7 @@ add_library(libworld STATIC
     worldHelper.hpp
     stateMachine.hpp
     hostServices.cpp
+    openflights.hpp
 )
 
 set_property(TARGET libworld PROPERTY CXX_STANDARD 14)
