Change libdatasxp to libloaders

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -72,8 +72,8 @@ message("PROTOBUF_LIBRARY" = ${PROTOBUF_LIBRARY})
 
 add_subdirectory(libworld)
 add_subdirectory(libworld_test)
-add_subdirectory(libdataxp)
-add_subdirectory(libdataxp_test)
+add_subdirectory(libloaders)
+add_subdirectory(libloaders_test)
 add_subdirectory(libai)
 add_subdirectory(libai_test)
 if (WIN32)
