--- a/src/libloaders_test/CMakeLists.txt
+++ b/src/libloaders_test/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.9)
-project(libdataxp_test CXX)
+project(libloaders_test CXX)
 
 include(CTest)
 include(GoogleTest)
 enable_testing()
 
-add_executable(libdataxp_test
+add_executable(libloaders_test
     libdataxp_test.h
     cppTest.cpp
     xpAirportReaderTest.cpp
@@ -14,13 +14,13 @@ add_executable(libdataxp_test
     hydrationTest.cpp
 )
 
-set_property(TARGET libdataxp_test PROPERTY CXX_STANDARD 14)
-target_include_directories(libdataxp_test PUBLIC ../libworld ../libdataxp ../libworld_test)
-target_link_libraries(libdataxp_test libdataxp libworld GTest::GTest GTest::Main)
+set_property(TARGET libloaders_test PROPERTY CXX_STANDARD 14)
+target_include_directories(libloaders_test PUBLIC ../libworld ../libloaders ../libworld_test)
+target_link_libraries(libloaders_test libloaders libworld GTest::GTest GTest::Main)
 
 if (ATCBUILD_CAN_RUN_TESTS)
     gtest_discover_tests(
-        libdataxp_test
+        libloaders_test
         PROPERTIES WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     )
 endif()
