Load multiple apt.dat according to scenery_packs.ini

--- a/src/libdataxp/CMakeLists.txt
+++ b/src/libdataxp/CMakeLists.txt
@@ -3,8 +3,10 @@ project(libdataxp VERSION 0.1.0)
 
 add_library(libdataxp STATIC 
     libdataxp.h
+    tokenValueFileReaderBase.cpp
     xpAirportReader.cpp
     xpFmsxReader.cpp
+    xpSceneryPacksIniReader.cpp
 )
 
 set_property(TARGET libdataxp PROPERTY CXX_STANDARD 14)
