--- a/src/libdataxp_test/CMakeLists.txt
+++ b/src/libdataxp_test/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(libdataxp_test
     xpAirportReaderTest.cpp
     airportOpsTest.cpp
     xpFmsxReaderTest.cpp
+    xpSceneryPacksIniReaderTest.cpp
     hydrationTest.cpp
 )
 
