Load apt.dat from custom scenery folders

--- a/src/libloaders/CMakeLists.txt
+++ b/src/libloaders/CMakeLists.txt
@@ -3,8 +3,10 @@ project(libloaders VERSION 0.1.0)
 
 add_library(libloaders STATIC 
     libdataxp.h
+    tokenValueFileReaderBase.cpp
     xpAirportReader.cpp
     xpFmsxReader.cpp
+    xpSceneryPacksIniReader.cpp
     libopenflights.hpp
 )
 
