Load apt.dat from custom scenery
- Load apt.dat from custom scenery folders as listed in "Custom Scenery/scenery_packs.ini"
- Stop loading airports from "Resources/default scenery/default apt dat" (instead,  the default airports are now loaded from "Custom Scenery/Global Airports" according to order in scenery_packs.ini)
- Fix bug in handling trailing spaces when reading flight plan files

--- a/src/libloaders_test/CMakeLists.txt
+++ b/src/libloaders_test/CMakeLists.txt
@@ -7,10 +7,12 @@ enable_testing()
 
 add_executable(libloaders_test
     libdataxp_test.h
+    testHelpers.cpp
     cppTest.cpp
     xpAirportReaderTest.cpp
     airportOpsTest.cpp
     xpFmsxReaderTest.cpp
+    xpSceneryPacksIniReaderTest.cpp
     hydrationTest.cpp
     openflightsTest.cpp
 )
