Add benchmark test for IntMap - WIP

--- a/src/server/Atc.Data/Atc.Data.csproj
+++ b/src/server/Atc.Data/Atc.Data.csproj
@@ -7,4 +7,9 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Navaids" />
+      <Folder Include="Traffic" />
+    </ItemGroup>
+
 </Project>
