--- a/src/console/package.json
+++ b/src/console/package.json
@@ -16,6 +16,9 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "ts-proto": "^1.25.0"    
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
