--- a/src/server/Zero.Latency.Servers.Tests/Zero.Latency.Servers.Tests.csproj
+++ b/src/server/Zero.Latency.Servers.Tests/Zero.Latency.Servers.Tests.csproj
@@ -5,13 +5,18 @@
         <LangVersion>9.0</LangVersion>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Atc.Data\Atc.Data.csproj" />
-      <ProjectReference Include="..\Atc.Math\Atc.Math.csproj" />
+        <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="NUnit" Version="3.12.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\Zero.Latency.Servers\Zero.Latency.Servers.csproj" />
-      <ProjectReference Include="..\Zero.Serialization.Buffers\Zero.Serialization.Buffers.csproj" />
     </ItemGroup>
 
 </Project>
