--- a/src/server/Atc.Data.Cli/Atc.Data.Cli.csproj
+++ b/src/server/Atc.Data.Cli/Atc.Data.Cli.csproj
@@ -4,6 +4,9 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>atcc</AssemblyName>
+        <LangVersion>9.0</LangVersion>
+        <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
