--- a/src/server/Atc.World/Atc.World.csproj
+++ b/src/server/Atc.World/Atc.World.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\Zero.Serialization.Buffers\Zero.Serialization.Buffers.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="protobuf-net" Version="3.0.101" />
+    </ItemGroup>
+
 </Project>
