--- a/src/console/package.json
+++ b/src/console/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/googlemaps": "^3.43.3",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -17,7 +19,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "ts-proto": "^1.25.0"    
+    "ts-proto": "^1.25.0"
   },
   "scripts": {
     "start": "react-scripts start",
