--- a/src/server/Atc.Server/Atc.Server.csproj
+++ b/src/server/Atc.Server/Atc.Server.csproj
@@ -13,6 +13,7 @@
     
     <ItemGroup>
       <ProjectReference Include="..\Atc.Data\Atc.Data.csproj" />
+      <ProjectReference Include="..\Atc.Sound\Atc.Sound.csproj" />
       <ProjectReference Include="..\Atc.Speech.Abstractions\Atc.Speech.Abstractions.csproj" />
       <ProjectReference Include="..\Atc.World\Atc.World.csproj" />
       <ProjectReference Include="..\Zero.Doubt.Logging\Zero.Doubt.Logging.csproj" />
