Make plugin receive messages from server

--- a/src/pluginxp/plugin/CMakeLists.txt
+++ b/src/pluginxp/plugin/CMakeLists.txt
@@ -112,6 +112,7 @@ add_xplane_plugin(pluginxp 301
         proto/atc.pb.cc
         utils.h
         utils.cpp
+        dispatcher.hpp
         serviceClient.hpp
         pluginInstance.hpp
         entryPoint.cpp
