--- a/src/server/Zero.Doubt.Logging/Zero.Doubt.Logging.csproj
+++ b/src/server/Zero.Doubt.Logging/Zero.Doubt.Logging.csproj
@@ -7,4 +7,8 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
+    </ItemGroup>
+
 </Project>
