--- a/src/server/Zero.Serialization.Buffers/Zero.Serialization.Buffers.csproj
+++ b/src/server/Zero.Serialization.Buffers/Zero.Serialization.Buffers.csproj
@@ -7,4 +7,8 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Crc32.NET" Version="1.2.0" />
+    </ItemGroup>
+
 </Project>
