--- a/src/server/Atc.Sound/Atc.Sound.csproj
+++ b/src/server/Atc.Sound/Atc.Sound.csproj
@@ -16,6 +16,7 @@
         <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
     </PropertyGroup>
     <ItemGroup>
+        <ProjectReference Include="..\Atc.Speech.Abstractions\Atc.Speech.Abstractions.csproj" />
         <ProjectReference Include="..\Zero.Doubt.Logging.Generators\Zero.Doubt.Logging.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\Zero.Doubt.Logging\Zero.Doubt.Logging.csproj" />
     </ItemGroup>
