--- a/src/server/Atc.World/Atc.World.csproj
+++ b/src/server/Atc.World/Atc.World.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Atc.Data\Atc.Data.csproj" />
       <ProjectReference Include="..\Atc.Math\Atc.Math.csproj" />
+      <ProjectReference Include="..\Atc.Speech.Abstractions\Atc.Speech.Abstractions.csproj" />
       <ProjectReference Include="..\Zero.Latency.Servers\Zero.Latency.Servers.csproj" />
       <ProjectReference Include="..\Zero.Serialization.Buffers\Zero.Serialization.Buffers.csproj" />
     </ItemGroup>
