--- a/src/server/Zero.Latency.Servers/Zero.Latency.Servers.csproj
+++ b/src/server/Zero.Latency.Servers/Zero.Latency.Servers.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Just.Utility\Just.Utility.csproj" />
         <ProjectReference Include="..\Zero.Doubt.Logging\Zero.Doubt.Logging.csproj" />
     </ItemGroup>
 
