--- a/src/server/Atc.Speech.Abstractions/Atc.Speech.Abstractions.csproj
+++ b/src/server/Atc.Speech.Abstractions/Atc.Speech.Abstractions.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Atc.Data\Atc.Data.csproj" />
+    </ItemGroup>
+
 </Project>
