--- a/src/server/Zero.Doubt.Logging.Tests/Zero.Doubt.Logging.Tests.csproj
+++ b/src/server/Zero.Doubt.Logging.Tests/Zero.Doubt.Logging.Tests.csproj
@@ -16,6 +16,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.9.0" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2" PrivateAssets="all" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="..\Zero.Doubt.Logging.Generators\Zero.Doubt.Logging.Generators.csproj" />
       <ProjectReference Include="..\Zero.Doubt.Logging\Zero.Doubt.Logging.csproj" />
     </ItemGroup>
 
