--- a/src/server/Atc.Server/Atc.Server.csproj
+++ b/src/server/Atc.Server/Atc.Server.csproj
@@ -17,6 +17,8 @@
       <ProjectReference Include="..\Atc.Speech.Abstractions\Atc.Speech.Abstractions.csproj" />
       <ProjectReference Include="..\Atc.World\Atc.World.csproj" />
       <ProjectReference Include="..\Zero.Doubt.Logging\Zero.Doubt.Logging.csproj" />
+      <ProjectReference Include="..\Zero.Latency.Servers.Tests\Zero.Latency.Servers.Tests.csproj" />
+      <ProjectReference Include="..\Zero.Loss.Actors.Tests\Zero.Loss.Actors.Tests.csproj" />
       <ProjectReference Include="..\Zero.Serialization.Buffers\Zero.Serialization.Buffers.csproj" />
     </ItemGroup>
     
