--- a/src/server/Atc.World.Tests/Atc.World.Tests.csproj
+++ b/src/server/Atc.World.Tests/Atc.World.Tests.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Atc.Data.Sources\Atc.Data.Sources.csproj" />
       <ProjectReference Include="..\Atc.Data\Atc.Data.csproj" />
       <ProjectReference Include="..\Atc.Math\Atc.Math.csproj" />
       <ProjectReference Include="..\Atc.Sound\Atc.Sound.csproj" />
