--- a/src/server/Atc.Speech.AzurePlugin/Atc.Speech.AzurePlugin.csproj
+++ b/src/server/Atc.Speech.AzurePlugin/Atc.Speech.AzurePlugin.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Atc.Speech.Abstractions\Atc.Speech.Abstractions.csproj" />
+        <ProjectReference Include="..\Atc.World.Abstractions\Atc.World.Abstractions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
