--- a/src/server/Atc.Server.Daemon/Atc.Server.Daemon.csproj
+++ b/src/server/Atc.Server.Daemon/Atc.Server.Daemon.csproj
@@ -14,6 +14,7 @@
       <ProjectReference Include="..\Atc.Data\Atc.Data.csproj" />
       <ProjectReference Include="..\Atc.Server\Atc.Server.csproj" />
       <ProjectReference Include="..\Atc.Speech.WinLocalPlugin\Atc.Speech.WinLocalPlugin.csproj" />
+      <ProjectReference Include="..\Atc.World.Abstractions\Atc.World.Abstractions.csproj" />
       <ProjectReference Include="..\Just.Cli\Just.Cli.csproj" />
       <ProjectReference Include="..\Zero.Serialization.Buffers\Zero.Serialization.Buffers.csproj" />
     </ItemGroup>
