--- a/src/server/Atc.Speech.WinLocalPlugin/Atc.Speech.WinLocalPlugin.csproj
+++ b/src/server/Atc.Speech.WinLocalPlugin/Atc.Speech.WinLocalPlugin.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Atc.Speech.Abstractions\Atc.Speech.Abstractions.csproj" />
+      <ProjectReference Include="..\Atc.World.Abstractions\Atc.World.Abstractions.csproj" />
     </ItemGroup>
 
 </Project>
