--- a/src/server/Atc.World/Atc.World.csproj
+++ b/src/server/Atc.World/Atc.World.csproj
@@ -12,6 +12,7 @@
       <ProjectReference Include="..\Atc.Data\Atc.Data.csproj" />
       <ProjectReference Include="..\Atc.Math\Atc.Math.csproj" />
       <ProjectReference Include="..\Atc.Speech.Abstractions\Atc.Speech.Abstractions.csproj" />
+      <ProjectReference Include="..\Atc.World.Abstractions\Atc.World.Abstractions.csproj" />
       <ProjectReference Include="..\Zero.Latency.Servers\Zero.Latency.Servers.csproj" />
       <ProjectReference Include="..\Zero.Loss.Actors\Zero.Loss.Actors.csproj" />
       <ProjectReference Include="..\Zero.Serialization.Buffers\Zero.Serialization.Buffers.csproj" />
@@ -19,6 +20,10 @@
 
     <ItemGroup>
         <PackageReference Include="protobuf-net" Version="3.0.101" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Abstractions" />
     </ItemGroup>
 
 </Project>
