--- a/src/server/Atc.World.Tests/Atc.World.Tests.csproj
+++ b/src/server/Atc.World.Tests/Atc.World.Tests.csproj
@@ -21,6 +21,7 @@
       <ProjectReference Include="..\Atc.Data\Atc.Data.csproj" />
       <ProjectReference Include="..\Atc.Math\Atc.Math.csproj" />
       <ProjectReference Include="..\Atc.Sound\Atc.Sound.csproj" />
+      <ProjectReference Include="..\Atc.Speech.AzurePlugin\Atc.Speech.AzurePlugin.csproj" />
       <ProjectReference Include="..\Atc.Speech.WinLocalPlugin\Atc.Speech.WinLocalPlugin.csproj" />
       <ProjectReference Include="..\Atc.World.Abstractions\Atc.World.Abstractions.csproj" />
       <ProjectReference Include="..\Atc.World.Testability\Atc.World.Testability.csproj" />
