--- a/src/server/Atc.World/Atc.World.csproj
+++ b/src/server/Atc.World/Atc.World.csproj
@@ -22,4 +22,8 @@
         <PackageReference Include="protobuf-net" Version="3.0.101" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Control" />
+    </ItemGroup>
+
 </Project>
