--- a/src/daemon/Atc.Server.Tests/Atc.Server.Tests.csproj
+++ b/src/daemon/Atc.Server.Tests/Atc.Server.Tests.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
+
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
@@ -12,18 +12,28 @@
         <PackageReference Include="NUnit" Version="3.13.2" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
         <PackageReference Include="coverlet.collector" Version="3.1.0" />
+        <PackageReference Include="FluentAssertions" Version="6.7.0" />
+        <PackageReference Include="protobuf-net" Version="3.1.17" />
         <PackageReference Include="protobuf-net.BuildTools" Version="3.1.17">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="FluentAssertions" Version="6.7.0" />
-    </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\Atc.Grains\Atc.Grains.csproj" />
+        <ProjectReference Include="..\Atc.Server\Atc.Server.csproj" />
     </ItemGroup>
 
+    <!--PropertyGroup>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
+    <ItemGroup>
+        <Compile Remove="$(CompilerGeneratedFilesOutputPath)/*/**/*.cs" />
+    </ItemGroup-->
+
+    <ItemGroup>
+        <AdditionalFiles Include="Samples/proto/samples.proto" OneOf="enum" />
+    </ItemGroup>
+    
 </Project>
