atcd: improve testability of grain

--- a/src/daemon/Atc.Grains/Atc.Grains.csproj
+++ b/src/daemon/Atc.Grains/Atc.Grains.csproj
@@ -13,4 +13,8 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Atc.Telemetry\Atc.Telemetry.csproj" />
+    </ItemGroup>
+
 </Project>
