--- a/src/daemon/Atc.World.Contracts/Atc.World.Contracts.csproj
+++ b/src/daemon/Atc.World.Contracts/Atc.World.Contracts.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Atc.Maths\Atc.Maths.csproj" />
+    </ItemGroup>
+
 </Project>
