atcd - telemetry generators - WIP

--- a/src/daemon/Atc.Speech.AzurePlugin/Atc.Speech.AzurePlugin.csproj
+++ b/src/daemon/Atc.Speech.AzurePlugin/Atc.Speech.AzurePlugin.csproj
@@ -15,4 +15,11 @@
       <ProjectReference Include="..\Atc.World.Contracts\Atc.World.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    </ItemGroup>
+    <PropertyGroup>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
 </Project>
