--- a/src/daemon/Atc.Grains/Atc.Grains.csproj
+++ b/src/daemon/Atc.Grains/Atc.Grains.csproj
@@ -17,4 +17,11 @@
       <ProjectReference Include="..\Atc.Telemetry\Atc.Telemetry.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    </ItemGroup>
+    <PropertyGroup>
+        <EmitCompilerGeneratedFiles>false</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
 </Project>
