--- a/src/daemon/Atc.Telemetry.Impl/Atc.Telemetry.Impl.csproj
+++ b/src/daemon/Atc.Telemetry.Impl/Atc.Telemetry.Impl.csproj
@@ -6,18 +6,25 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
+    
     <ItemGroup>
-      <PackageReference Include="protobuf-net.BuildTools" Version="3.1.17">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
+        <PackageReference Include="protobuf-net.BuildTools" Version="3.1.17">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Atc.Server\Atc.Server.csproj" />
-      <ProjectReference Include="..\Atc.Sound.OpenAL\Atc.Sound.OpenAL.csproj" />
-      <ProjectReference Include="..\Atc.Speech.AzurePlugin\Atc.Speech.AzurePlugin.csproj" />
-      <ProjectReference Include="..\Atc.World\Atc.World.csproj" />
+        <ProjectReference Include="..\Atc.Server\Atc.Server.csproj" />
+        <ProjectReference Include="..\Atc.Sound.OpenAL\Atc.Sound.OpenAL.csproj" />
+        <ProjectReference Include="..\Atc.Speech.AzurePlugin\Atc.Speech.AzurePlugin.csproj" />
+        <ProjectReference Include="..\Atc.World\Atc.World.csproj" />
+
+        <ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 
 </Project>
