atcd + telemetry-viewer: complete initial telemetry; move parts from conversation poc to prod

--- a/src/daemon/Atc.Telemetry.Impl/Atc.Telemetry.Impl.csproj
+++ b/src/daemon/Atc.Telemetry.Impl/Atc.Telemetry.Impl.csproj
@@ -24,7 +24,7 @@
         <ProjectReference Include="..\Atc.Speech.AzurePlugin\Atc.Speech.AzurePlugin.csproj" />
         <ProjectReference Include="..\Atc.World\Atc.World.csproj" />
 
-        <ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+        <!--ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" /-->
     </ItemGroup>
 
 </Project>
