--- a/src/daemon/Atc.World.Tests/Atc.World.Tests.csproj
+++ b/src/daemon/Atc.World.Tests/Atc.World.Tests.csproj
@@ -33,4 +33,12 @@
         <ProjectReference Include="..\Atc.World\Atc.World.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    </ItemGroup>
+    <PropertyGroup>
+        <EmitCompilerGeneratedFiles>false</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
+
 </Project>
