--- a/src/daemon/Atc.Server/Atc.Server.csproj
+++ b/src/daemon/Atc.Server/Atc.Server.csproj
@@ -20,6 +20,15 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Atc.Telemetry\Atc.Telemetry.csproj" />
+      <ProjectReference Include="..\Atc.Utilities\Atc.Utilities.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    </ItemGroup>
+    <PropertyGroup>
+        <EmitCompilerGeneratedFiles>false</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
+    
 </Project>
