--- a/src/daemon/Atc.Sound.OpenAL/Atc.Sound.OpenAL.csproj
+++ b/src/daemon/Atc.Sound.OpenAL/Atc.Sound.OpenAL.csproj
@@ -16,4 +16,11 @@
       <ProjectReference Include="..\Atc.World.Contracts\Atc.World.Contracts.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    </ItemGroup>
+    <PropertyGroup>
+        <EmitCompilerGeneratedFiles>false</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
 </Project>
