--- a/src/daemon/Atc.Speech.AzurePlugin/Atc.Speech.AzurePlugin.csproj
+++ b/src/daemon/Atc.Speech.AzurePlugin/Atc.Speech.AzurePlugin.csproj
@@ -19,7 +19,7 @@
         <ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
     <PropertyGroup>
-        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <EmitCompilerGeneratedFiles>false</EmitCompilerGeneratedFiles>
         <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
     </PropertyGroup>
 </Project>
