--- a/src/daemon/Atc.World/Atc.World.csproj
+++ b/src/daemon/Atc.World/Atc.World.csproj
@@ -10,6 +10,7 @@
       <Folder Include="Airports" />
       <Folder Include="Control" />
       <Folder Include="Airspaces" />
+      <Folder Include="LLHZ" />
       <Folder Include="Traffic" />
     </ItemGroup>
 
@@ -18,5 +19,13 @@
       <ProjectReference Include="..\Atc.Maths\Atc.Maths.csproj" />
       <ProjectReference Include="..\Atc.World.Contracts\Atc.World.Contracts.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Atc.Telemetry.Generators\Atc.Telemetry.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    </ItemGroup>
+    <PropertyGroup>
+        <EmitCompilerGeneratedFiles>false</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
 
 </Project>
