atcd: add executable project + initial start up & shut down

--- a/src/daemon/Atc.World.Contracts/Atc.World.Contracts.csproj
+++ b/src/daemon/Atc.World.Contracts/Atc.World.Contracts.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\Atc.Maths\Atc.Maths.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Control" />
+    </ItemGroup>
+
 </Project>
